# ci-helper

./: .actrc  .coverage  .env.example  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TEST_EXECUTION_GUIDE.md  TYPE_FIX_PROGRESS.md  WSL_CRASH_ANALYSIS.md  additional_coverage_opportunities.md  check_rich.py  ci-helper.toml.example  count_errors.py  coverage.json  coverage_analysis_report.md  coverage_verification_final_report.md  lint.sh  pyproject.toml  pytest.ini  pytest_minimal.ini  renovate.json  run_tests_continue.sh  run_tests_crash_guard.sh  run_tests_minimal.sh  run_tests_safe.sh  test_config.txt  test_output.txt  test_results.xml
.antigravity/: rules.md
.claude/: rules.md
.github/workflows/: ci.yml  release.yml  simple-test.yml  test-failure.yml
.kiro/hooks/: date-auto-fix.json  manual-date-fix.json
.kiro/specs/ai-analysis-improvement/: README.md  design.md  requirements.md  tasks.md  technical-details.md
.kiro/specs/ci-helper-ai-integration/: design.md  tasks.md
.kiro/specs/ci-helper-ai-integration-new/: requirements.md  tasks.md
.kiro/specs/ci-helper-cli/: design.md  requirements.md  tasks.md
.kiro/specs/cli-log-formatting/: design.md  requirements.md  tasks.md
.kiro/specs/coverage-improvement/: design.md  requirements.md  tasks.md
.kiro/specs/test-coverage-improvement/: tasks.md
.kiro/specs/test-failure-fixes/: design.md  requirements.md  tasks.md
.kiro/steering/: PROJECT_OVERVIEW.md  formatter_only_plan.md  product.md  structure.md  tech.md
archive/spec/ci-helper-cli/: design.md  requirements.md  tasks.md
data/patterns/: PATTERN_DATABASE_SUMMARY.md  action_patterns.json  build_patterns.json  ci_patterns.json  dependency_patterns.json  pattern_index.json  potential_patterns.json  test_patterns.json  unknown_errors.json  validate_patterns.py
data/patterns/custom/: README.md  learned_patterns.json  user_patterns.json
data/templates/: README.md  TEMPLATE_SUMMARY.md  build_fixes.json  config_fixes.json  dependency_fixes.json  network_fixes.json  permission_fixes.json  template_index.json  test_fixes.json  validate_templates.py
docs/: 1st_Plot.md  README.md  TEST_QUALITY_IMPROVEMENT_SUMMARY.md  ai-configuration.md  ai-integration.md  ai-troubleshooting.md  api-key-setup.md  ci_helper_plan.md  coverage-maintenance.md  custom-pattern-guide.md  installation.md  learning_engine_typing_plan.md  mock-strategies.md  pattern-recognition-guide.md  product.md  real-environment-testing.md  regex.md  security-guide.md  technical-details.md  testing-guidelines.md  testing-quick-reference.md  troubleshooting-pattern-recognition.md  troubleshooting.md  usage.md
docs/old_develop_docs/: ci_helper_plan.md  precommit-rules.md  structure.md
docs/old_develop_docs/test-coverage-improvement/: design.md  requirements.md
docs/old_develop_docs/test-failure-fixes/: design.md  requirements.md  tasks.md
scripts/: real_environment_test.py  run_ci_tests.py  test_analyze_command.py  test_real_environment.py  verify_ci_integration.py  verify_installation.py
src/ci_helper/: __init__.py  cli.py
src/ci_helper/ai/: __init__.py  approval_system.py  auto_fix_config.py  auto_fixer.py  cache.py  cache_manager.py  confidence_calculator.py  config_manager.py  cost_manager.py  cost_tracker.py  custom_pattern_manager.py  error_handler.py  exceptions.py  fallback_handler.py  feedback_collector.py  fix_applier.py  fix_generator.py  fix_templates.py  integration.py  interactive_commands.py  interactive_session.py  learning_engine.py  models.py  pattern_database.py  pattern_engine.py  pattern_fallback_handler.py  pattern_improvement.py  pattern_matcher.py  performance_optimizer.py  prompts.py  (+4 more)
templates/: analysis.txt  build_failure.txt  fix.txt  interactive.txt  test_failure.txt
test_data/: failure_patterns.json  regression_prevention.db  unknown_errors.json
test_results/: real_environment_test_report.md
tests/: __init__.py  conftest.py  test_ci_environment.py  test_quality_guidelines.py
tests/fixtures/: __init__.py  ai_config_templates.py  ai_responses.py  ci_test_setup.py  config_loader.py  filesystem_mocks.py  mock_providers.py  sample_logs.py  test_config_fixtures.py
tests/integration/: README_E2E_TESTS.md  TEST_FIXES_SUMMARY.md  __init__.py  test_ai_e2e_comprehensive.py  test_ai_error_scenarios.py  test_ai_integration.py  test_ai_pattern_workflow_integration.py  test_ai_performance_optimization.py  test_ci_cd_integration.py  test_command_flow.py  test_command_integration.py  test_e2e_workflow.py  test_error_scenarios.py  test_integration_summary.md  test_log_formatting_core_integration.py  test_log_formatting_integration.py  test_log_formatting_scenarios.py  test_menu_command_integration.py  test_menu_integration.py  test_pattern_recognition_integration.py  test_real_ci_validation.py  test_simple_e2e.py
tests/plugins/: progress_logger.py
tests/unit/: test_ai_formatter.py  test_cache_manager.py  test_ci_runner.py  test_clean_command.py  test_cli_basic.py  test_cli_commands.py  test_command_menus.py  test_config.py  test_config_fixtures.py  test_doctor_command.py  test_error_handler.py  test_exceptions.py  test_graceful_shutdown.py  test_init_command.py  test_log_analysis_integration.py  test_log_analyzer.py  test_log_comparator.py  test_log_compressor.py  test_log_extractor.py  test_log_file_selection.py  test_log_history_management.py  test_logger.py  test_logs_command.py  test_menu_system.py  test_models.py  test_pattern_test_data.py  test_recovery_guide.py  test_security.py  test_security_integration.py  test_test_command.py
tests/utils/: README_file_mocks.md  __init__.py  async_mock_stabilizer.py  async_mock_usage_guide.md  comprehensive_verification.py  file_mock_helpers.py  file_operation_mock_stabilizer.py  file_operation_mock_usage_guide.md  fix_verification_framework.py  mock_call_stabilizer.py  mock_helpers.py  performance_monitor.py  regression_prevention_system.py  simple_file_mock_stabilizer.py  test_quality_improver.py  test_quality_master.py
(+144 files in other folders)
