[project]
name = "ci-helper"
version = "0.1.0"
description = "actを使用したローカルCI/CDパイプライン検証とAI統合機能を提供するCLIツール"
readme = "README.md"
authors = [
    { name = "scottlz0310", email = "scottlz0310@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "rich>=13.9.0",
    "tiktoken>=0.8.0",
    "tomli>=2.0.0; python_version < '3.11'",
]
keywords = ["ci", "cd", "github-actions", "act", "cli", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
ci-run = "ci_helper.cli:cli"

[project.urls]
Homepage = "https://github.com/scottlz0310/ci-helper"
Repository = "https://github.com/scottlz0310/ci-helper"
Issues = "https://github.com/scottlz0310/ci-helper/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = ["pytest>=8.0.0", "pytest-cov>=6.0.0", "pytest-mock>=3.14.0"]
lint = ["ruff>=0.8.0", "mypy>=1.13.0"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "S101", # use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ci_helper --cov-report=term-missing --cov-report=html"
