[project]
name = "ci-helper"
version = "1.0.0"
description = "actを使用したローカルCI/CDパイプライン検証とAI統合機能を提供するCLIツール"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "scottlz0310", email = "scottlz0310@users.noreply.github.com" },
]
maintainers = [
    { name = "scottlz0310", email = "scottlz0310@users.noreply.github.com" },
]
requires-python = ">=3.14.2"
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "tomli>=2.3.0; python_version < '3.11'",
    "pyyaml>=6.0.3",
    # AI統合用の依存関係
    "openai>=2.13.0",
    "anthropic>=0.76.0",
    "aiohttp>=3.13.3",
    "aiofiles>=25.1.0",
]
keywords = [
    "ci",
    "cd",
    "github-actions",
    "act",
    "cli",
    "testing",
    "local-ci",
    "workflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.scripts]
ci-run = "ci_helper.cli:main"

[project.urls]
Homepage = "https://github.com/scottlz0310/ci-helper"
Repository = "https://github.com/scottlz0310/ci-helper.git"
Issues = "https://github.com/scottlz0310/ci-helper/issues"
Documentation = "https://github.com/scottlz0310/ci-helper/blob/main/README.md"
Changelog = "https://github.com/scottlz0310/ci-helper/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "basedpyright>=1.36.2",
    "pre-commit>=4.5.1",
    "bandit[toml]>=1.9.2",
    "pytest-asyncio>=1.3.0",
    "psutil>=7.1.3",
    "pytest-timeout>=2.4.0",
    "types-aiofiles>=25.1.0.20251011",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.15.1",
]
lint = ["ruff>=0.14.13", "basedpyright>=1.36.2", "bandit[toml]>=1.9.2"]

[[tool.uv.index]]
url = "https://pkgs.safetycli.com/repository/public/pypi/simple/"
default = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (ok in tests)
    "S105",   # possible hardcoded password (false positives for comments)
    "S110",   # try-except-pass (intentional for non-critical errors)
    "S112",   # try-except-continue (intentional for non-critical errors)
    "S603",   # subprocess call (trusted input from config)
    "S607",   # starting process with partial executable path (ok for docker/act)
    "B904",   # raise without from (intentional for custom exceptions)
    "RUF001", # ambiguous unicode characters in strings (ok for Japanese)
    "RUF002", # ambiguous unicode characters in docstrings (ok for Japanese)
    "RUF003", # ambiguous unicode characters in comments (ok for Japanese)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S603", "T201"]
"data/patterns/validate_patterns.py" = ["T201"]
"data/templates/validate_templates.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.basedpyright]
pythonVersion = "3.14"
# 緩和された設定でCI/pre-commitの整合性を保つ
# CI設定(.github/workflows/ci.yml)とpre-commit設定(.pre-commit-config.yaml)は
# このpyproject.tomlの設定を参照するため、設定変更はここで一元管理する
typeCheckingMode = "strict"
include = ["src"]
exclude = [
    ".venv",
    "**/__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*", "*/__pycache__/*"]
parallel = true
data_file = ".coverage"
branch = false
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
skip_empty = false

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-config=pyproject.toml",
    "-n",
    "logical",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--maxfail=50",
]
minversion = "8.0"
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: 実行時間が長いテスト",
    "integration: 統合テスト",
    "performance: パフォーマンステスト",
    "ci: CI/CD関連テスト",
    "unit: ユニットテスト",
    "ai: AI機能関連テスト",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:pytest_xdist",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101", # assert_used
    "B601", # paramiko_calls
    "B603", # subprocess_without_shell_equals_true
    "B404", # blacklist import subprocess
    "B607", # start_process_with_partial_path
    "B105", # hardcoded_password_string
    "B110", # try_except_pass
    "B112", # try_except_continue
]
